<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.setting.SettingActivity"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/icon_yellow"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:layout_marginStart="@dimen/_15sdp"
            android:foregroundGravity="center"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/icon_yellow"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <RelativeLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_75sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/icon_yellow"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_19sdp"
            android:background="@drawable/profile" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/coin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/coin"
            android:textColor="@color/icon_yellow"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_75sdp"/>
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/coin"
            android:layout_marginStart="@dimen/_19sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reward"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/reward"
            android:textColor="@color/icon_yellow"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_75sdp"/>
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/reward"
            android:layout_marginStart="@dimen/_19sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/wishList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/wishlist"
            android:textColor="@color/icon_yellow"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_75sdp"/>
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/wishlist"
            android:layout_marginStart="@dimen/_19sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="@color/icon_yellow"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_75sdp"/>
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/language"
            android:layout_marginStart="@dimen/_19sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/notification"
            android:textColor="@color/icon_yellow"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_75sdp"/>
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/notification"
            android:layout_marginStart="@dimen/_19sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/help"
            android:textColor="@color/icon_yellow"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_75sdp"/>
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/help"
            android:layout_marginStart="@dimen/_19sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@color/icon_yellow"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_75sdp"/>
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/about"
            android:layout_marginStart="@dimen/_19sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/invite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/invite"
            android:textColor="@color/icon_yellow"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_75sdp"/>
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/invite"
            android:layout_marginStart="@dimen/_19sdp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/_40sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/PackageName"
            android:textColor="@color/icon_yellow"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>
</LinearLayout>